2002-04-14  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-db2html.c: 
	(yelp_db2html_convert): revert a little, in wait for sanders new
	  stylesheets.
	- use GError to signal errors while parsing document. Still needs
	  to be added to above layers. 
	- don't leek the stylesheet name.

	* src/yelp-error.[ch]: added.

	* src/yelp-view-content.c: added includes to fix warnings.

	* src/yelp-view-index.c: same.

	* src/yelp-util.c (yelp_util_extract_docpath_from_uri): 
	- added support for man and info pages too.

	* src/yelp-html.c: 
	- loads of changes :)
	- don't use GnomeVFS Async calls.
	- Read non-docbook data in an idle
	- Shortcut the gnome vfs help module and call internal
	  docbook2html code instead if document is xml/sgml docbook.
	- Needs more cleaning up and breaking out into another file/class.
	- Don't inherit HtmlView, instead inherit GObject and have a
	  get_widget function.

	* src/yelp-db2html.[ch]: added from libgnome. Use this in-proc
	  instead of calling as external scripts.

	* src/Makefile.am (yelp_SOURCES): added yelp-db2html.[ch]

	* configure.in (GNOMELOCALEDIR): depend on libxslt for the
	  docbook->html conversion.

2002-04-12  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (TOC_BLOCK_SEPARATOR): fixed string, thanks
	  menthos.

2002-04-11  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-toc.c (yelp_view_toc_start): changed the string
	  "Get Help on..." to "Help Contents" by suggestion from Calum.

	* configure.in (GETTEXT_PACKAGE): added ja to ALL_LINGUAS

	* src/yelp-view-toc.c:
	- did some cleanups
	- make output in first page look nicer.
	- Changed a few strings, SORRY!! Fixes: #73439

	* src/yelp-view-content.c (yelp_view_content_stop): added/impl.

	* src/yelp-util.c:
	(tree_find_node_uri): renamed from tree_find_node.
	(yelp_util_find_node_from_name): added/impl.
	(tree_find_node_name): added/impl.

	* src/yelp-html.c:
	(yh_init): set content-type to utf8 on the loading document.