@@ -57,7 +57,8 @@ GType           yelp_view_content_get_type     (void);
 GtkWidget      *yelp_view_content_new          (GNode             *doc_tree);
 
 void            yelp_view_content_show_uri     (YelpViewContent   *content,
-						const gchar       *uri);
+						const gchar       *uri,
+						GError           **error);
 void            yelp_view_content_stop         (YelpViewContent   *content);
 
 #endif /* __YELP_VIEW_CONTENT__ */
